k8s-setup/ingress-somecompany-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-somecompany-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    cert-manager.io/issuer: ca-cert-issuer
spec:
  tls:
    - hosts:
      - dev.somecompany.com
      secretName: dev-sc-secret
  rules:
    - host: dev.somecompany.com
      http:
        paths:
          - path: /api/users/?(.*)
            backend:
              serviceName: auth-srv
              servicePort: 3000
          - path: /api/payments/?(.*)
            backend:
              serviceName: payments-srv
              servicePort: 3000
          - path: /api/tickets/?(.*)
            backend:
              serviceName: tickets-srv
              servicePort: 3000
          - path: /api/orders/?(.*)
            backend:
              serviceName: orders-srv
              servicePort: 3000
          - path: /?(.*) 
            backend:
              serviceName: client-srv
              servicePort: 3000
